traefik-v2.9.6-http-externaldns/002-traefik.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.9.6
          args:
            - --api.insecure
            - --accesslog
            - --log
            - --log.level=DEBUG
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
            - name: websecure
              containerPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "30s"
    external-dns.alpha.kubernetes.io/hostname: subdomain.example.com

spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - port: 8080
      targetPort: dashboard
      name: dash
    - port: 80
      targetPort: web
      name: whoami
    - port: 443
      targetPort: websecure
      name: whoami-ssl
